deploy: 20d77a7f14a776091708dcb9c763eb7af2bb7cbf

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
-<h1>ESP Firmware</h1><ul>
-<li><a href="pages/firmware/flasher_args.json">flasher_args.json</a></li>
-<li><a href="pages/firmware/hello_world.bin">hello_world.bin</a></li>
-<li><a href="pages/firmware/hello_world.elf">hello_world.elf</a></li>
+<h1>Firmware</h1><ul>
+<li><a href="firmware/flasher_args.json">flasher_args.json</a></li>
+<li><a href="firmware/hello_world.bin">hello_world.bin</a></li>
+<li><a href="firmware/hello_world.elf">hello_world.elf</a></li>
 </ul>
