--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <h1>Firmware</h1><ul>
+<li><a href="firmware/bluedroid_gatt_server.bin">bluedroid_gatt_server.bin</a></li>
+<li><a href="firmware/bluedroid_gatt_server.elf">bluedroid_gatt_server.elf</a></li>
 <li><a href="firmware/flasher_args.json">flasher_args.json</a></li>
-<li><a href="firmware/hello_world.bin">hello_world.bin</a></li>
-<li><a href="firmware/hello_world.elf">hello_world.elf</a></li>
 </ul>
