deploy: fcefda4a15d3cac6f6be079cfe25ebab6946a9c2

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 <head>
   <meta charset="UTF-8">
   <title>ESP32 Hello World Flasher</title>
@@ -8,5 +8,10 @@
 <body>
   <h1>Прошивка ESP32 через браузер</h1>
   <esp-web-install-button manifest="manifest.json"></esp-web-install-button>
+
+  <h2>Или скачайте прошивку вручную:</h2>
+  <ul>
+  <li><a href="firmware/bluedroid_gatt_server.bin">bluedroid_gatt_server.bin</a></li>
+  </ul>
 </body>
 </html>
